Move bs3.jpg to public/images/Home
The src directory is for components and their CSS files.
Images are in public/images.

--- a/bc_frontend/src/home/Home.css
+++ b/bc_frontend/src/home/Home.css
@@ -8,7 +8,7 @@
   flex-grow: 1;
 }
 .bgimage {
-  background-image: url(../pub/bs3.jpg);
+  background-image: url("../../public/images/Home/bs3.jpg");
   height: 100vh;
   position: relative;
   overflow: hidden;
