Fix bootstrap btn class bug
The btn class was trying to render a ripple effect that was messing
with the layout, adding min-width to unwanted elements.

Also, we used to import bootstrap from node and from the cdn, which
was a waste.

--- a/bc_frontend/src/club-finder/ClubFinder.css
+++ b/bc_frontend/src/club-finder/ClubFinder.css
@@ -37,6 +37,7 @@ button.clubfinder-btn {
   font-weight: bold;
   color: #123c45;
   max-width: 50%;
+  border: none;
   border-radius: 10px;
 }
 /* Checkbox classes */
